[gd_scene load_steps=9 format=3 uid="uid://b24of2dgueclo"]

[ext_resource type="Script" path="res://scenes/ui/end_screen.gd" id="1_l2m5y"]
[ext_resource type="PackedScene" uid="uid://chslu6b1yfssu" path="res://scenes/ui/sound_button.tscn" id="2_peety"]
[ext_resource type="AudioStream" uid="uid://dwo8xcotclrqn" path="res://assets/audio/victory.ogg" id="3_3yc8v"]
[ext_resource type="AudioStream" uid="uid://eljhnr4c3y5q" path="res://assets/audio/defeat.ogg" id="4_ui1gd"]

[sub_resource type="Animation" id="Animation_j13nb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hera2"]
resource_name = "in"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hnyn6"]
resource_name = "out"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lwfoj"]
_data = {
"RESET": SubResource("Animation_j13nb"),
"in": SubResource("Animation_hera2"),
"out": SubResource("Animation_hnyn6")
}

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_l2m5y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lwfoj")
}
autoplay = "in"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.298039, 0.639216, 0.352941)

[node name="MC" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MC/PanelContainer"]
custom_minimum_size = Vector2(180, 2.08165e-12)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MC/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLable" type="Label" parent="MC/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_colors/font_shadow_color = Color(0.137255, 0.14902, 0.231373, 1)
theme_override_colors/font_outline_color = Color(0.137255, 0.14902, 0.231373, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "VICTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MC/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_colors/font_shadow_color = Color(0.137255, 0.14902, 0.231373, 1)
theme_override_colors/font_outline_color = Color(0.137255, 0.14902, 0.231373, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 8
text = "you Won!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MC/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" parent="MC/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_peety")]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="QuitButton" parent="MC/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_peety")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Menu"

[node name="VictoryStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3yc8v")
volume_db = -5.0
bus = &"sfx"

[node name="DefeatStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ui1gd")
volume_db = -5.0
bus = &"sfx"
